wip, multi imports per table