@@ -6,6 +6,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 import java.io.File;
 import java.io.FileInputStream;
 import java.net.URI;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.zip.GZIPInputStream;
@@ -19,6 +20,7 @@ import com.bakdata.conquery.commands.ShardNode;
 import com.bakdata.conquery.integration.common.IntegrationUtils;
 import com.bakdata.conquery.integration.common.LoadingUtil;
 import com.bakdata.conquery.integration.common.RequiredTable;
+import com.bakdata.conquery.integration.common.ResourceFile;
 import com.bakdata.conquery.integration.json.JsonIntegrationTest;
 import com.bakdata.conquery.integration.json.QueryTest;
 import com.bakdata.conquery.integration.tests.ProgrammaticIntegrationTest;
@@ -79,7 +81,7 @@ public class ImportDeletionTest implements ProgrammaticIntegrationTest {
 			LoadingUtil.importConcepts(conquery, test.getRawConcepts());
 			conquery.waitUntilWorkDone();
 
-			LoadingUtil.importTableContents(conquery, test.getContent().getTables(), conquery.getDataset());
+			LoadingUtil.importTableContents(conquery, test.getContent().getTables());
 			conquery.waitUntilWorkDone();
 		}
 
@@ -205,12 +207,13 @@ public class ImportDeletionTest implements ProgrammaticIntegrationTest {
 													 .orElseThrow();
 
 
-			final String path = import2Table.getCsv().getPath();
+			final ResourceFile csv = import2Table.getCsv()[0];
+			final String path = csv.getPath();
 
 			//copy csv to tmp folder
 			// Content 2.2 contains an extra entry of a value that hasn't been seen before.
 			FileUtils.copyInputStreamToFile(In.resource(path.substring(0, path.lastIndexOf('/')) + "/" + "content2.2.csv")
-											  .asStream(), new File(conquery.getTmpDir(), import2Table.getCsv().getName()));
+											  .asStream(), new File(conquery.getTmpDir(), csv.getName()));
 
 			File descriptionFile = new File(conquery.getTmpDir(), import2Table.getName() + ConqueryConstants.EXTENSION_DESCRIPTION);
 			File preprocessedFile =  new File(conquery.getTmpDir(), import2Table.getName() + ConqueryConstants.EXTENSION_PREPROCESSED);
@@ -223,7 +226,7 @@ public class ImportDeletionTest implements ProgrammaticIntegrationTest {
 			TableInputDescriptor input = new TableInputDescriptor();
 			{
 				input.setPrimary(IntegrationUtils.copyOutput(import2Table.getPrimaryColumn()));
-				input.setSourceFile(import2Table.getCsv().getName());
+				input.setSourceFile(csv.getName());
 				input.setOutput(new OutputDescription[import2Table.getColumns().length]);
 				for (int i = 0; i < import2Table.getColumns().length; i++) {
 					input.getOutput()[i] = IntegrationUtils.copyOutput(import2Table.getColumns()[i]);
@@ -233,7 +236,7 @@ public class ImportDeletionTest implements ProgrammaticIntegrationTest {
 			Jackson.MAPPER.writeValue(descriptionFile, desc);
 
 			//preprocess
-			conquery.preprocessTmp(conquery.getTmpDir(), List.of(descriptionFile));
+			conquery.preprocessTmp(conquery.getTmpDir(), List.of(descriptionFile), Collections.emptyList());
 
 			//import preprocessedFiles
 			conquery.getDatasetsProcessor().addImport(conquery.getNamespace(), new GZIPInputStream(new FileInputStream(preprocessedFile)));
